--- a/songRecommender/AndrewExplore.ipynb
+++ b/songRecommender/AndrewExplore.ipynb
@@ -29,7 +29,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"yo wassup this is update 1\")"
+   ]
   }
  ],
  "metadata": {
