--- a/pose_estimation/pose_estimation.ipynb
+++ b/pose_estimation/pose_estimation.ipynb
@@ -2,12 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hellow world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# my data science project\n",
+    "\n",
+    "print(\"Hellow world!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# my data science project\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -17,7 +34,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.6"
   }
  },
