Add parent dir to path for notebooks to use tools

--- a/pose_estimation/pose_estimation.ipynb
+++ b/pose_estimation/pose_estimation.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: this allows for python files under tools to be imported\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
