--- a/songRecommender/AndrewExplore.ipynb
+++ b/songRecommender/AndrewExplore.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note: this allows for python files under tools to be imported\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,6 +44,13 @@
    "source": [
     "print(\"yo wassup this is update 1\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -50,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
