--- a/edward-science/my-data-science-project.ipynb
+++ b/edward-science/my-data-science-project.ipynb
@@ -9,7 +9,9 @@
     "# Note: this allows for python files under tools to be imported\n",
     "import sys\n",
     "import os\n",
-    "sys.path.append(os.path.abspath('..'))"
+    "sys.path.append(os.path.abspath('..'))\n",
+    "\n",
+    "from tools.analysis import single_variable_EDA, pairwise_EDA, correlation_analysis, chord_diagram"
    ]
   },
   {
@@ -60,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.undefined"
   }
  },
  "nbformat": 4,
